--- a/style.css
+++ b/style.css
@@ -52,12 +52,12 @@ form button:hover{
   margin-right: auto;
   padding-left: 50px;
   height: 70vh;
-  width: 40%;
+  width: 50%;
 }
 
 .list-obj{
   margin-bottom: 15px;
-  height: 7vh;
+  height: auto;
   width: 100%;
   display: flex;
   transition: all ease 0.6s;
@@ -66,12 +66,12 @@ form button:hover{
 .list-obj-value{
   border: none;
   margin: 0;
-  padding: 0;
   color: black;
   background-color: white;
   height: 100%;
   width: 80%;
   font-size: 1.6rem;
+  word-wrap: break-word;
   text-align: left;
   list-style-type: none;
   text-decoration-line: none;
@@ -81,7 +81,6 @@ form button:hover{
 .list-obj-mark , .list-obj-trash{
   border: none;
   margin: 0;
-  padding: 0;
   height: 100%;
   width: 10%;
   font-size: 1.5rem;
